--- a/Sorts/Sorts/Sorts.csproj
+++ b/Sorts/Sorts/Sorts.csproj
@@ -45,15 +45,18 @@
   <ItemGroup>
     <Compile Include="Helpers.cs" />
     <Compile Include="Elementary Sorts\Insertion.cs" />
-    <Compile Include="Merge Sort\Merge.cs" />
+    <Compile Include="Merge Sorts\Merge.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Elementary Sorts\Selection.cs" />
     <Compile Include="Elementary Sorts\Shell.cs" />
+    <Compile Include="Quick Sorts\Quick.cs" />
+    <Compile Include="Quick Sorts\Quick3Way.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
