--- a/Graphs/Graphs/Graphs.csproj
+++ b/Graphs/Graphs/Graphs.csproj
@@ -43,12 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cycle.cs" />
-    <Compile Include="DepthFirstSearch.cs" />
-    <Compile Include="Graph.cs" />
-    <Compile Include="Paths.cs" />
+    <Compile Include="Graph\Cycle.cs" />
+    <Compile Include="Graph\DepthFirstSearch.cs" />
+    <Compile Include="Graph\Graph.cs" />
+    <Compile Include="Graph\Paths.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolGraph.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
