--- a/Graphs/DirectedGraphs/DirectedGraphs.csproj
+++ b/Graphs/DirectedGraphs/DirectedGraphs.csproj
@@ -47,9 +47,11 @@
     <Compile Include="DiGraph.cs" />
     <Compile Include="DirectedCycle.cs" />
     <Compile Include="DirectedDFS.cs" />
+    <Compile Include="KosarajuSCC.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Topological.cs" />
+    <Compile Include="TransitiveClosure.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
