--- a/String Algorithms/String Algorithms/String Sorts.csproj
+++ b/String Algorithms/String Algorithms/String Sorts.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LSD.cs" />
+    <Compile Include="MSD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
