--- a/String Algorithms/String Algorithms/String Sorts.csproj
+++ b/String Algorithms/String Algorithms/String Sorts.csproj
@@ -47,6 +47,7 @@
     <Compile Include="MSD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Quick3string.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
