--- a/String Algorithms/String Algorithms/String Sorts.csproj
+++ b/String Algorithms/String Algorithms/String Sorts.csproj
@@ -43,15 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LSD.cs" />
-    <Compile Include="MSD.cs" />
+    <Compile Include="Sorts\LSD.cs" />
+    <Compile Include="Sorts\MSD.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Quick3string.cs" />
+    <Compile Include="Sorts\Quick3string.cs" />
+    <Compile Include="Tries\TrieST.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
