--- a/String Algorithms/DATA COMPRESSION/DATA COMPRESSION.csproj
+++ b/String Algorithms/DATA COMPRESSION/DATA COMPRESSION.csproj
@@ -43,9 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Huffman.cs" />
-    <Compile Include="Node.cs" />
-    <Compile Include="PriorityQueue.cs" />
+    <Compile Include="LZW\ExtMethods.cs" />
+    <Compile Include="LZW\ANSI.cs" />
+    <Compile Include="LZW\BitReader.cs" />
+    <Compile Include="Huffman\Huffman.cs" />
+    <Compile Include="LZW\LZW.cs" />
+    <Compile Include="Huffman\Node.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
