--- a/Context/Context/Context.csproj
+++ b/Context/Context/Context.csproj
@@ -46,13 +46,16 @@
   <ItemGroup>
     <Compile Include="Btree\BTreeSet.cs" />
     <Compile Include="Btree\Page.cs" />
-    <Compile Include="Quick3Way.cs" />
+    <Compile Include="Ford Fulkerson\FlowEdge.cs" />
+    <Compile Include="Ford Fulkerson\FlowNetwork.cs" />
+    <Compile Include="Ford Fulkerson\FordFulkerson.cs" />
+    <Compile Include="SuffixArray\Quick3Way.cs" />
     <Compile Include="scaffolding\CollisionSystem.cs" />
     <Compile Include="scaffolding\Particle.cs" />
     <Compile Include="scaffolding\PriorityQueue.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SuffixArray.cs" />
+    <Compile Include="SuffixArray\SuffixArray.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
