--- a/String Algorithms/SubStrinSearch/SubStrinSearch.csproj
+++ b/String Algorithms/SubStrinSearch/SubStrinSearch.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AbstractSearch.cs" />
     <Compile Include="BoyerMoore.cs" />
     <Compile Include="KMP.cs" />
     <Compile Include="Program.cs" />
